RESOLVED FIXED 185699
Fullscreen to PiP results in exit fullscreen call failure
https://bugs.webkit.org/show_bug.cgi?id=185699
Summary Fullscreen to PiP results in exit fullscreen call failure
Jeremy Jones
Reported 2018-05-16 15:19:16 PDT
Fullscreen to PiP results in exit fullscreen call failure
Attachments
Patch (3.78 KB, patch)
2018-05-16 15:25 PDT, Jeremy Jones
eric.carlson: review+
Patch for landing (4.23 KB, patch)
2018-05-17 14:44 PDT, Jeremy Jones
no flags
Jeremy Jones
Comment 1 2018-05-16 15:19:48 PDT
Jeremy Jones
Comment 2 2018-05-16 15:25:03 PDT
Jeremy Jones
Comment 3 2018-05-17 14:44:18 PDT
Created attachment 340646 [details] Patch for landing
WebKit Commit Bot
Comment 4 2018-05-17 15:15:54 PDT
The commit-queue encountered the following flaky tests while processing attachment 340646 [details]: media/modern-media-controls/scrubber-support/scrubber-support-drag.html bug 185751 (authors: graouts@apple.com and ryanhaddad@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2018-05-17 15:16:28 PDT
Comment on attachment 340646 [details] Patch for landing Clearing flags on attachment: 340646 Committed r231924: <https://trac.webkit.org/changeset/231924>
Note You need to log in before you can comment on or make changes to this bug.