Fullscreen to PiP results in exit fullscreen call failure https://bugs.webkit.org/show_bug.cgi?id=185699 rdar://problem/40310291

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-05-17
Reviewed by Eric Carlson.

No new tests because no behavior change.

Prevent multiple exit fullscreen calls when transitioning from fullscreen to picture-in-picture.

* platform/ios/VideoFullscreenInterfaceAVKit.mm:
(-[WebAVPlayerViewControllerDelegate playerViewControllerShouldAutomaticallyDismissAtPictureInPictureStart:]):
Implement this to prevent AVKit from automatically initiating exit fullscreen on pip.

(VideoFullscreenInterfaceAVKit::didStartPictureInPicture):
Set the return to fullscreen flag here, since this is where exit fullscreen happens.

(VideoFullscreenInterfaceAVKit::shouldExitFullscreenWithReason):
Don't exit fullscreen here since it is already initiated in didStartPictureInPicture.

Canonical link: https://commits.webkit.org/201211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231924 268f45cc-cd09-0410-ab3c-d52691b4dbfc